--- a/src/components/code/code-js/js-coderun/pages/elem-coderun-01.html
+++ b/src/components/code/code-js/js-coderun/pages/elem-coderun-01.html
@@ -3,7 +3,7 @@
 <!-- Ссылки -->
 <div class="article">
   <h2>Ссылки</h2>
-  
+
   <p><a href="https://coderun.yandex.ru/catalog">coderun.yandex.ru</a></p>
   <p><a href="https://ru.hexlet.io/blog/posts/grokaem-algoritmy-gayd-po-algoritmam-dlya-teh-komu-slozhno-reshat-zadachi">ru.hexlet.io Грокаем алгоритмы</a></p>
 </div>
@@ -36,7 +36,7 @@
 
   <h4>Формат ввода</h4>
   <p>На вход функции подаются три параметра: целое число N количество сотрудников, готовых к объединению; массив целых чисел staff список грейдов сотрудников, готовых к объединению; целое число K (1 &lt;= K &lt;= N) количество доступных клавиатур.</p>
-   
+
   <h4>Формат вывода</h4>
   <p>Функция должна вернуть единственное целое число - максимально возможный уровень Яндексформера при объединении K разработчиков.</p>
 
@@ -79,7 +79,7 @@
     <li>можно считать, что в массиве nums1 зарезервированно место для всех элементов (n + m) и заполнены нулями;</li>
     <li>результат должен сохраниться в переменной nums1, результат функции явно возвращать не обязательно</li>
   </ol>
-  
+
   <details>
   <summary>Решение</summary>
 <pre>function merge(nums1, m, nums2, n) {
@@ -130,14 +130,13 @@
   <code>Выход: True</code>
 
   <details>
-    <summary>Решение</summary>
-    <h4>Решение с помощью Двух указателей</h4>
+    <summary>Решение с помощью Двух указателей</summary>
     <p>Решение с помощью Двух указателей подходит для случая, когда массив чисел упорядочен. Если массив не упорядочен, то для его сортировки требуется дополнительная сложность O(nlogn).</p>
     <p>Сначала левый указатель указывает на начало массива, а правый на его конец. Если их сумма равна целевому значению, то мы выходим, если нет, то:</p>
     <p>если сумма больше целевого значения, то нам нужна меньшая сумма (логично, да?) и мы сдвигаем левее правый указатель</p>
     <p>если сумма меньше целевого значения, то мы сдвигаем левый указатель, чтобы её увеличить</p>
     <p>Мы получили сложность по времени O(n) и по памяти O(1).</p>
-      
+
 <pre>function twoNum(nums, k) {
   let result = false;
   // отсортировать массив
@@ -159,12 +158,14 @@
 
   return result;
 }</pre>
+</details>
 
-  <h4>Решение с помощью Словаря</h4>
-  <p>Решение с помощью Словаря подходит если массив не отсортированный. Для составления словаря из массива требуется дополнительная сложность O(n). Зато доступ к ключу словаря вывполняется за время O(1).</p>
-  И давайте ещё одно альтернативное решение с линейной сложностью. При итерации по массиву, имея текущее значение, нам бы очень хотелось знать, есть ли в массиве значение, которое дополняет текущее до искомого. Это же суть задачи? Как мы можем найти его за линейное время? Верно, при помощи словаря.
-  <p>Первым делом, переносим массив в словарь, в качестве ключей — числа, а значений — их индексы. Во время второго прохода проверяем, есть ли число, которое дополняет текущее до искомого равное target-x. Если есть — отлично, если нет — идём дальше. Таким образом, имеем временную сложность O(n) и сложность по памяти O(n).</p>
-  
+  <details>
+    <summary>Решение с помощью Словаря</summary>
+    <p>Решение с помощью Словаря подходит если массив не отсортированный. Для составления словаря из массива требуется дополнительная сложность O(n). Зато доступ к ключу словаря вывполняется за время O(1).</p>
+    <p>И давайте ещё одно альтернативное решение с линейной сложностью. При итерации по массиву, имея текущее значение, нам бы очень хотелось знать, есть ли в массиве значение, которое дополняет текущее до искомого. Это же суть задачи? Как мы можем найти его за линейное время? Верно, при помощи словаря.</p>
+    <p>Первым делом, переносим массив в словарь, в качестве ключей — числа, а значений — их индексы. Во время второго прохода проверяем, есть ли число, которое дополняет текущее до искомого равное target-x. Если есть — отлично, если нет — идём дальше. Таким образом, имеем временную сложность O(n) и сложность по памяти O(n).</p>
+
 <pre>function twoNum(nums, k) {
   let result = false;
   let voc = {};
@@ -182,15 +183,15 @@
 
   return result;
 }</pre>
-  </details>
+</details>
 
-  
-  <h4>Правильное решение с помощью Словаря</h4>
-  <p>Можно улучшить предыдущее решение и убрать начальное заполнение словаря.</p>
-  <p>Сначала создаем пустой словарь (хэш-таблица - ключ: значение). Берем первое число из массива и смотрим в словаре нет ли такого ключа, который в сумме с первым числом давал бы число k. Словарь пока пустой и такого ключа в нем нет. Поэтому заносим первое число в словарь в виде ключа.</p>
-  <p>Берем второе число из массива и смотрим в словаре, если в нем есть такой ключ, который в сумме со вторым числом давал бы число k, то возвращаем true, если нет, то заносим второе число в словарь в виде ключа и идем по массиву дальше.</p>
-  <p>Если пройдем до конца массива и не найдем нужный ключ, то возвращаем false</p>
-  <p>Сложность такого алгоритма по времени O(n) и по памяти O(n). Потому что пройтись по массиву это сложность по времени O(n) и по памяти O(1), поскольку дополнительная память не требуется. Доступ к словарю (запись и чтение) это сложность по времени O(1) и по памяти O(n) потому что создаем в памяти новую структуру данных из n элементов.</p>
+  <details>
+    <summary>Правильное решение с помощью Словаря</summary>
+    <p>Можно улучшить предыдущее решение и убрать начальное заполнение словаря.</p>
+    <p>Сначала создаем пустой словарь (хэш-таблица - ключ: значение). Берем первое число из массива и смотрим в словаре нет ли такого ключа, который в сумме с первым числом давал бы число k. Словарь пока пустой и такого ключа в нем нет. Поэтому заносим первое число в словарь в виде ключа.</p>
+    <p>Берем второе число из массива и смотрим в словаре, если в нем есть такой ключ, который в сумме со вторым числом давал бы число k, то возвращаем true, если нет, то заносим второе число в словарь в виде ключа и идем по массиву дальше.</p>
+    <p>Если пройдем до конца массива и не найдем нужный ключ, то возвращаем false</p>
+    <p>Сложность такого алгоритма по времени O(n) и по памяти O(n). Потому что пройтись по массиву это сложность по времени O(n) и по памяти O(1), поскольку дополнительная память не требуется. Доступ к словарю (запись и чтение) это сложность по времени O(1) и по памяти O(n) потому что создаем в памяти новую структуру данных из n элементов.</p>
 <pre>function twoNum(nums, k) {
   let result = false;
   let voc = {};
@@ -210,6 +211,7 @@
 
   return result;
 }</pre>
+  </details>
 </article>
 
 
