--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -66,6 +66,7 @@
     <li><a href="rs-test/rs-test-eventloop.html" class="js-rs-test">[St2] Event Loop & Animation</a> (88 из 100)</li>
     <li><a href="rs-test/rs-test-testing.html" class="js-rs-test">[St2] Testing</a> (75 из 100)</li>
     <li><a href="rs-test/rs-test-error.html" class="js-rs-test">[St2] Error handling</a> (71 из 100)</li>
+    <li><a href="rs-test/rs-test-dp.html" class="js-rs-test">[St2] Design Patterns</a> (0 из 100)</li>
   </ol>
 </article>
 
